style view on matches

--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,65 +1,71 @@
-<h1>Matches</h1>
-<br>
-<p>ID: <%= @pet.id %></p>
-<br>
-<p>Name: <%= @pet.name %></p>
-<br>
-<%= link_to 'back to user', pets_path %>
-<br>
-<div class="flex">
-    <div class="nav" style="flex-grow: 1">
-        <div>
-        <h4>Matches</h4>
-        <% unless @matches.empty? %>
-            <% @matches.each do |match| %>
-            <ul>
-                <li><%= match.name %></li>
-            </ul>
-            <% end %>
-        <% end %>
-        </div>
-        <br>
-        <div>
-        <h4>Sent Request</h4>
-        <% unless @sent_requests.empty? %>
-            <% @sent_requests.each do |sent| %>
-            <ul>
-                <li><%= sent.name %></li>
-            </ul>
-            <% end %>
-        <% end %>
-        </div>
-        <br>
-        <div>
-        <h4>Received Request</h4>
-        <% unless @received_requests.empty? %>
-            <% @received_requests.each do |received| %>
-            <ul>
-                <li><%= received.name %></li>
-                <%= link_to accept_match_pet_matches_path(received) do %>
-                  <button>accept</button>
-                <% end %>
-                <%= link_to decline_match_pet_matches_path(received) do %>
-                  <button>decline</button>
-                <% end %>
-            </ul>
-            <% end %>
-        <% end %>
-        </div>
-    </div>
-    <div class="main" style="flex-grow: 8">
-    <h1>Possible Matches<h1>
-    <% @pets.each do |pet| %>
-        <% if current_user.pets.find(params[:pet_id]).id != pet.id %>
-        <% unless possible_match?(pet) %>
-            <ul>
-              <li><%= pet.name %></li>
-            </ul>
-            <%= link_to pet_matches_path(pet), method: :post do %>
-            <button>Send Request</button>
-            <% end %>
-        <% end %>
-        <% end %>
-    <% end %>
-    </div>
+
+ <% @pets.each_with_index do |pet| %>
+  <% if current_user.pets.find(params[:pet_id]).id != pet.id %>
+ <% unless possible_match?(pet) %>
+<div class = "relative mx-auto">
+    <div class="tphoto rounded-lg absolute top-0 left-0" data-id = "<%=pet.id%>">
+    <!-- Slider main container -->
+<div data-controller="carousel" class="swiper-container h-96 w-full  bg-white rounded-t-lg  overflow-auto  scrollbar-hide"
+data-carousel-options-value='{
+    "pagination": { "el": ".swiper-pagination", 
+                    "dynamicBullets": "true" },
+    "navigation": { "nextEl": ".swiper-button-next", 
+                    "prevEl": ".swiper-button-prev"}}'>
+
+  <!-- Pagination (... or 1/10 or progress bar) -->
+  <div class="swiper-pagination"></div>
+  <!-- Navigation buttons (< >) -->
+  <div class="swiper-button-prev"></div>
+  <div class="swiper-button-next"></div>
+
+  <!-- Additional required wrapper -->
+  <div class="swiper-wrapper">
+
+      <% if pet.images? %>
+  <% pet.images.each do |img| %>
+    <%=image_tag(img.thumb.url, alt: "Image",  :class => "object-fill rounded-lg rounded-b-none swiper-slide") %>
+              <% end %>
+<% end %>
+</div>
+ 
+  
+</div>
+<div class = "bg-white border rounded-b-lg  rounded-t-none  ">
+<div class = "flex-row ">
+<div class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded cursor-pointer text-center float-right">
+<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+</svg>
 <div>
+</div>
+</div>
+</div>
+      <div class="flex justify-between">
+        <div class="text-xl float-left ml-2"><%=pet.name%> 
+        <span class="font-light ml-5"><%=pet.age%></span>
+      </div> 
+    </div>
+    <span class ="ml-2 text-gray-400">3 km</span>
+    <p class = "mt-4" >
+    </p>
+ </div>
+    
+    </div>
+  </div>
+</div>
+    <% end %>
+        <% end %>
+        <% end %>
+
+  
+
+</body>
+<br>
+
+
+
+
+
+
+
+
