change image for landing page

--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,7 +1,8 @@
-
 <%= render 'shared/header'%>
+
+
 <body class="antialiased bg-blue-200">
-<div class="sm:grid md:grid grid-cols-2 ">
+<div class="sm:grid md:grid grid-cols-2 gap-4">
   <div class = "px-16 my-20"> 
   <h1 class = "font-bold italic text-6xl text-gray-700 text-bold text-center">
    Studmate
@@ -16,14 +17,12 @@
    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
    </p>
   </div>
- <div class="px-16">
-    <div class="max-w-4xl rounded-2xl my-16 flex flex-wrap content-center">
-
+ <div class="px-16 ">
+    <div class="max-w-4xl rounded-2xl my-16 flex flex-wrap content-center", >
+    <%=image_tag("logo_pic", width:'75%')%>  
     </div>
 </div>
     
   </div>
-
-
 
 </body>
