--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,3 @@
-
 <style>
       #menu-toggle:checked + #menu {
         display: block;
@@ -26,8 +25,6 @@
   </div>
   <%else%>
   <ul class="lg:flex items-center justify-between text-gray-700 pt-4 lg:pt-0 text-lg">
-        <li><a class="lg:p-4 py-3 px-0 block  hover:text-blue-400 font-bold" href="#">About Us</a></li>
-        <li><a class="lg:p-4 py-3 px-0 block  hover:text-blue-400 font-bold" href="#">Contact</a></li>
         <li><%= link_to "Log in", new_user_session_path, :class => "hover:text-blue-400 font-bold lg:p-4 py-3 px-0 block " %></li>
         <li><%= link_to "Sign up", new_user_registration_path, :class => "hover:text-blue-400 font-bold lg:p-4 py-3 px-0 block " %></li>
       </ul>
@@ -36,6 +33,15 @@
   
 <%end%>
   </header>
+
+    <% if flash[:notice] %>
+      <%= render 'layouts/alerts' %>
+    <% end %>
+
+    <% if flash[:alert] %>
+      <%= render 'layouts/alerts' %>
+    <% end %>
+
 
  
  
