--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,28 @@
-<h2>Forgot your password?</h2>
+<body class = "bg-blue-200">
+
+<%= render 'shared/header'%>
+
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+ <h2 class="mt-20 text-center text-3xl font-extrabold text-gray-900 mb-8">
+        Forgot your Password?
+</h2>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+  <div  class="max-w-md mx-auto md:max-w-2xl">
+  <div class="field text-center">
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"px-3 py-3 placeholder-blueGray-300 text-blueGray-600 relative bg-white bg-white rounded text-sm border-0 shadow outline-none focus:outline-none focus:ring w-8/12 mb-3 mt-6" , placeholder:"Email address"%>
   </div>
+</div>
+
+ <div  class="max-w-md mx-auto md:max-w-2xl">
+  <div class="field text-center">
+     <div class="actions text-center">
+    <%= f.submit "Send me Reset Password Instructions",class:" mb-2 cursor-pointer justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 lg:w-6/12 sm:w-full" %>
+  </div>
+</div>
 <% end %>
-
-<%= render "devise/shared/links" %>
+ 
+ </body>
+ 
