--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -4,25 +4,20 @@
 <body class="antialiased bg-blue-200">
 <div class="sm:grid md:grid grid-cols-2 gap-4">
   <div class = "px-16 my-20"> 
-  <h1 class = "font-bold italic text-6xl text-gray-700 text-bold text-center">
+  <h1 class = "font-bold italic text-6xl text-gray-700 text-bold text-center font-serif">
    Studmate
   </h1>
   <br/>
-  <p class = "text-xl text-justify font italic">
-  Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-  Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-  when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-   It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
-   It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-   and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+  <p class = "text-7xl text-center font italic font-serif">
+  <span class = "text-red-700">Select the best </span><br/><span class = "text-red-300">Mate</span><br/><span class = "text-red-400">for Your Pets</span>
    </p>
   </div>
- <div class="px-16 ">
-    <div class="max-w-4xl rounded-2xl my-16 flex flex-wrap content-center", >
+ <div class="px-16 my-16">
+    <div class="max-w-4xl rounded-2xl my-12 flex flex-wrap content-center" >
     <%=image_tag("logo_pic", width:'75%')%>  
     </div>
 </div>
-    
-  </div>
 
-</body>
+  </body>
+
+  
