--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -14,11 +14,5 @@
   </ul>
 <% end %>
 <br>
-<% unless @matches.empty? %>
-      <% @matches.each do |f|%>
-            <%= link_to user_path(f) do %>
-              <%= f.name %>
-            <% end %>
-      <% end %>
-<% end %>
+<%= link_to 'back', pets_path %>
 
