--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -21,7 +21,7 @@ Account Settings:
     Email:  <span class = "float-right"> <%=current_user.email%>
    </div>
    <div class = "text-gray-600 text-md m-2">
-    Location:  <span class = "float-right"> <%=current_user.email%>
+    Location:  <span class = "float-right">  <%=@city%>,<%=@country%> </span>
    </div>
    </div>
    <div class = "text-center mt-8">
@@ -30,7 +30,7 @@ Account Settings:
   </div>
 </div>
  <div class = "relative ">
-  <div class="absolute bg-white absolute top-1/2 left-1/2 top-20 overflow-auto scrollbar-hide">
+  <div class="absolute bg-white top-1/2 left-1/2 overflow-auto scrollbar-hide mt-8">
     <div class="tphoto rounded-lg">
     <!-- Slider main container -->
 <div data-controller="carousel" class="swiper-container h-96 w-full bg-white rounded-t-lg "
@@ -56,7 +56,7 @@ data-carousel-options-value='{
   </div>
 </div>
 <div class = "bg-white border rounded-b-lg  rounded-t-none  ">
-<div class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded cursor-pointer text-center">
+<div class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded cursor-pointer text-center mb-2">
   <%=link_to "Edit Profile", edit_pet_path(@pet)%>
 </div>
       <div class="flex justify-between">
@@ -64,9 +64,8 @@ data-carousel-options-value='{
         <span class="font-light ml-5"><%=@pet.age%></span>
       </div> 
     </div>
-    <span class ="ml-2 text-gray-400 font-bold user-location"  >
-    </span>
-    <p class = "text-center text-justify" > <br/>
+         <br/>
+    <p class = "text-center text-justify " > <br/>
       <%if @pet.vaccinated == true%>
       <div class ="ml-2 text-gray-400 text-center font-bold">Hello, I am Vaccinated! 😄</div>
       <%else%>
@@ -76,6 +75,7 @@ data-carousel-options-value='{
       I came from the <%=@pet.breed%> Family!
     </div>
     <br/>
+    
     
     <div class = "text-2xl text-center">About me</div>
     <p class ="text-center">
