fix template error

--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -14,7 +14,7 @@
   </div>
  <div class="px-16 my-16">
     <div class="max-w-4xl rounded-2xl my-12 flex flex-wrap content-center" >
-    <%=image_tag("logo_pic", width:'75%')%>  
+    <%=image_tag("logo_pic.png", width:'75%')%>  
     </div>
 </div>
 
