--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -21,7 +21,7 @@ Account Settings:
     Email:  <span class = "float-right"> <%=current_user.email%>
    </div>
    <div class = "text-gray-600 text-md m-2">
-    Location:  <span class = "float-right">  <%=@city%>,<%=@country%> </span>
+    Location:  <span class = "float-right">  <%=@ct%>,<%=@ctry%> </span>
    </div>
    </div>
    <div class = "text-center mt-8">
