--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -9,8 +9,10 @@
   <div class="text-black font-white bg-white shadow-2xl ">
         <%= link_to "Requests", pet_matches_path(@pet), :class => "hover:text-blue-400 font-bold lg:p-3 py-2 px-0 block text-center text-3xl" %>
   </div>
-  <br/>
-  <br/>
+<div>
+
+
+</div>
   </div>
 </div>
 <%= flash[:danger] %>
@@ -52,7 +54,6 @@ data-carousel-options-value='{
         <%=@ct%>,<%=@ctry%> 
     </span>
      <%= link_to pet_match_pet_matches_path(:id => pet.id) do %>
-     <%= flash[:success] %>
      <div class="flex items-center justify-center w-full h-full cursor-pointer ">
       <div class="bg-white relative text-6xl  text-center">
        <svg xmlns="http://www.w3.org/2000/svg" class="h-32 w-32 hover:text-red-400" fill="red" viewBox="0 0 24 24" stroke="currentColor">
