--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -13,11 +13,15 @@
    </p>
   </div>
  <div class="px-16 my-16">
-    <div class="max-w-4xl rounded-2xl my-12 flex flex-wrap content-center" >
+    <div class="max-w-4xl rounded-2xl  flex flex-wrap content-center" >
     <%=image_tag("logo_pic.png", width:'75%')%>  
     </div>
-</div>
 
+    </div>
+</div>
+<div class = "pb-15 bg-gray-400">
+<%=render 'shared/footer'%>
+</div>
   </body>
 
   
