--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -22,13 +22,12 @@
    <%=link_to pet.name.capitalize(), pet_path(pet) if i==0%>
    </div>
     <%end%>
-   
   <% end %>
  
     </div>
 <% end %>
     <% end %>
-    <div class ="cursor-pointer bg-gray border-4 h-40 w-40 flex items-center justify-center rounded-xl hoverL">
+    <div class ="cursor-pointer bg-gray border-4 h-40 w-40 flex items-center justify-center rounded-xl">
     
  <%= link_to new_pet_path do %>
 <svg xmlns="http://www.w3.org/2000/svg" class="h-32 w-32" fill="none" viewBox="0 0 24 24" stroke="blue">
