--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -18,6 +18,7 @@
     <nav>
     <%if user_signed_in?%>
       <ul class="lg:flex items-center justify-between text-gray-700 pt-4 lg:pt-0 text-lg">
+         <li><%= link_to "See Pets", pets_path, :class => "hover:text-blue-400 font-bold lg:p-4 py-3 px-0 block " %></li>
         <li><%= link_to current_user.username.capitalize(), edit_user_registration_path, :class => "hover:text-blue-400 font-bold lg:p-4 py-3 px-0 block font-serif" %></li>
         <li><%= link_to "Logout", destroy_user_session_path, method: :delete, :class => "hover:text-blue-400 font-bold lg:p-4 py-3 px-0 block font-serif " %></li>
       </ul>
